--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,13 +1,13 @@
 {
   "version": 2,
   "functions": {
-    "index.py": {
-      "runtime": "python3.9",
+    "api/index.py": {
+      "runtime": "python@3.9",
       "memory": 1024,
       "maxDuration": 30
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/index.py" }
+    { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
