--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,13 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.py": {
-      "runtime": "python@3.9",
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.py" }
+    { "src": "/(.*)", "dest": "/index.py" }
   ]
 }
